--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angularfire2": "^4.0.0-rc.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
+    "firebase": "^4.4.0",
+    "promise-polyfill": "6.0.2",
+    "rxjs": "^5.4.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
